--- a/api/build.gradle
+++ b/api/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     // springsecurity
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    implementation "org.springframework.boot:spring-boot-starter-validation"
 }
 
 test {
