--- a/db/build.gradle
+++ b/db/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     // springsecurity
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    implementation "org.springframework.boot:spring-boot-starter-validation"
 }
 
 test {
