feet: openai-문법교정기능 추가

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation group: 'org.json', name: 'json', version: '20090211'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 test {
